first spike of helm#280 to support OpenShift Templates the templates get expanded on the client side before they are uploaded so they work on any kubernetes environment (cherry picked from commit 5037211)

--- a/glide.yaml
+++ b/glide.yaml
@@ -19,3 +19,7 @@ import:
 - package: github.com/google/go-querystring
 - package: github.com/google/go-github
   version: 81d0490d8aa8400f6760a077f4a2039eb0296e86
+- package: github.com/openshift/origin
+  version: v1.1
+  subpackages:
+  - /pkg
