--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,18 @@ cache:
   directories:
   - "$GOPATH/src/github.com/helm/helm/vendor"
 go:
-- 1.5.1
+  - 1.5.1
 install:
-- wget "https://github.com/Masterminds/glide/releases/download/0.7.2/glide-0.7.2-linux-amd64.tar.gz"
-- mkdir -p $HOME/bin
-- tar -vxz -C $HOME/bin --strip=1 -f glide-0.7.2-linux-amd64.tar.gz
-- export PATH="$HOME/bin:$PATH" GLIDE_HOME="$HOME/.glide"
-- go get github.com/golang/lint/golint
+  - pwd
+  - mkdir ../helm
+  - cd ../helm
+  - mv ../fabric8io/helm .
+  - pwd
+  - wget "https://github.com/Masterminds/glide/releases/download/0.7.2/glide-0.7.2-linux-amd64.tar.gz"
+  - mkdir -p $HOME/bin
+  - tar -vxz -C $HOME/bin --strip=1 -f glide-0.7.2-linux-amd64.tar.gz
+  - export PATH="$HOME/bin:$PATH" GLIDE_HOME="$HOME/.glide"
+  - go get github.com/golang/lint/golint
 script: make bootstrap build test test-charts
 before_deploy: make bootstrap-dist dist prep-bintray-json
 deploy:
