--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   - GO15VENDOREXPERIMENT=1
 branches:
   only:
-  - openshift-all
+  - openshift-all2
   - "/^v(?:[0-9]+\\.){2}[0-9]+.*$/"
 cache:
   directories:
